updated deprecated integer constructor to the new one